syntax = "proto3";

package MMORPG.Common.Proto.Map;
import "Entity/EntityType.proto";
import "Entity/NetTransform.proto";

message EntityEnterRequest {
    repeated int32 entity_id = 1;
}

message EntityEnterData {
    int32 entity_id = 1;
    Entity.EntityType entity_type = 2;
    int32 unit_id = 3;
    Entity.NetTransform transform = 4;
}

message EntityEnterResponse {
    repeated EntityEnterData datas = 1;
}
