syntax = "proto3";

package Common.Proto.Event.Map;

message EntityLeaveRequest {
    int32 entity_id = 1;
}

message EntityLeaveResponse {
    repeated int32 entity_ids = 1;
}