syntax = "proto3";

package Common.Proto.Event.Space;
import "Entity/EntitySync.proto";

message EntitySyncRequest {
    Entity.EntitySync entity_sync = 1;
}

message EntitySyncResponse {
    Entity.EntitySync entity_sync = 1;
}